# Cmake_learning

./: .gitignore  README.md
01-basic/A-hello-cmake/: main.cpp
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/B-hello-headers/include/: Hello.h
01-basic/B-hello-headers/src/: Hello.cpp
01-basic/C-static-library/: CMakeLists.txt
01-basic/C-static-library/include/static/: Hello.h
01-basic/C-static-library/src/: Hello.cpp  main.cpp
01-basic/D-shared-library/: CMakeLists.txt
01-basic/D-shared-library/src/: Hello.cpp  main.cpp
01-basic/E-installing/: CMakeLists.txt
01-basic/E-installing/include/installing/: Hello.h
01-basic/E-installing/install/lib/: shared_library.lib
01-basic/E-installing/src/: Hello.cpp  main.cpp
